RESOLVED FIXED190218
fieldset.elements should return an HTMLCollection instead of an HTMLFormControlsCollection
https://bugs.webkit.org/show_bug.cgi?id=190218
Summary fieldset.elements should return an HTMLCollection instead of an HTMLFormContr...
Chris Dumez
Reported 2018-10-02 13:35:17 PDT
fieldset.elements should return an HTMLCollection instead of an HTMLFormControlsCollection: - https://github.com/whatwg/html/commit/8beedf0c2ffd38853caddec67490288f47afc8eb Gecko has already behaved this way. Blink aligned with Gecko and the HTML specification in December 2016: - https://bugs.chromium.org/p/chromium/issues/detail?id=665291
Attachments
Patch (34.11 KB, patch)
2018-10-02 13:57 PDT, Chris Dumez
no flags
Patch (34.29 KB, patch)
2018-10-02 15:51 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-02 13:37:27 PDT
Test case: http://w3c-test.org/html/semantics/forms/the-fieldset-element/HTMLFieldSetElement.html Passes in both Chrome and Firefox, fails in Safari.
Chris Dumez
Comment 2 2018-10-02 13:57:14 PDT
Chris Dumez
Comment 3 2018-10-02 15:51:10 PDT
WebKit Commit Bot
Comment 4 2018-10-02 17:26:49 PDT
Comment on attachment 351449 [details] Patch Clearing flags on attachment: 351449 Committed r236778: <https://trac.webkit.org/changeset/236778>
WebKit Commit Bot
Comment 5 2018-10-02 17:26:50 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-10-02 17:27:28 PDT
Note You need to log in before you can comment on or make changes to this bug.