Source/WebCore/html/GenericCachedHTMLCollection.cpp
@@ -27,6 +27,7 @@
 #include "GenericCachedHTMLCollection.h"
 
 #include "HTMLAppletElement.h"
+#include "HTMLFieldSetElement.h"
 #include "HTMLNames.h"
 #include "HTMLObjectElement.h"
 #include "HTMLOptionElement.h"
@@ -72,6 +73,8 @@ bool GenericCachedHTMLCollection<traversalType>::elementMatches(Element& element
         return (element.hasTagName(aTag) || element.hasTagName(areaTag)) && element.hasAttributeWithoutSynchronization(hrefAttr);
     case DocAnchors:
         return element.hasTagName(aTag) && element.hasAttributeWithoutSynchronization(nameAttr);
+    case FieldSetElements:
+        return is<HTMLObjectElement>(element) || is<HTMLFormControlElement>(element);
     case ByClass:
     case ByTag:
     case ByHTMLTag:
