Source/WebCore/html/HTMLFormControlsCollection.cpp
@@ -23,7 +23,6 @@
 #include "config.h"
 #include "HTMLFormControlsCollection.h"
 
-#include "HTMLFieldSetElement.h"
 #include "HTMLFormElement.h"
 #include "HTMLImageElement.h"
 #include "HTMLNames.h"
@@ -41,7 +40,7 @@ HTMLFormControlsCollection::HTMLFormControlsCollection(ContainerNode& ownerNode)
     , m_cachedElement(nullptr)
     , m_cachedElementOffsetInArray(0)
 {
-    ASSERT(is<HTMLFormElement>(ownerNode) || is<HTMLFieldSetElement>(ownerNode));
+    ASSERT(is<HTMLFormElement>(ownerNode));
 }
 
 Ref<HTMLFormControlsCollection> HTMLFormControlsCollection::create(ContainerNode& ownerNode, CollectionType)
@@ -65,24 +64,17 @@ std::optional<Variant<RefPtr<RadioNodeList>, RefPtr<Element>>> HTMLFormControlsC
 
 const Vector<FormAssociatedElement*>& HTMLFormControlsCollection::unsafeFormControlElements() const
 {
-    ASSERT(is<HTMLFormElement>(ownerNode()) || is<HTMLFieldSetElement>(ownerNode()));
-    if (is<HTMLFormElement>(ownerNode()))
-        return downcast<HTMLFormElement>(ownerNode()).unsafeAssociatedElements();
-    return downcast<HTMLFieldSetElement>(ownerNode()).unsafeAssociatedElements();
+    return ownerNode().unsafeAssociatedElements();
 }
 
 Vector<Ref<FormAssociatedElement>> HTMLFormControlsCollection::copyFormControlElementsVector() const
 {
-    ASSERT(is<HTMLFormElement>(ownerNode()) || is<HTMLFieldSetElement>(ownerNode()));
-    if (is<HTMLFormElement>(ownerNode()))
-        return downcast<HTMLFormElement>(ownerNode()).copyAssociatedElementsVector();
-    return downcast<HTMLFieldSetElement>(ownerNode()).copyAssociatedElementsVector();
+    return ownerNode().copyAssociatedElementsVector();
 }
 
 const Vector<HTMLImageElement*>& HTMLFormControlsCollection::formImageElements() const
 {
-    ASSERT(is<HTMLFormElement>(ownerNode()));
-    return downcast<HTMLFormElement>(ownerNode()).imageElements();
+    return ownerNode().imageElements();
 }
 
 static unsigned findFormAssociatedElement(const Vector<FormAssociatedElement*>& elements, const Element& element)
@@ -118,6 +110,11 @@ HTMLElement* HTMLFormControlsCollection::customElementAfter(Element* current) co
     return nullptr;
 }
 
+HTMLFormElement& HTMLFormControlsCollection::ownerNode() const
+{
+    return downcast<HTMLFormElement>(CachedHTMLCollection<HTMLFormControlsCollection, CollectionTypeTraits<FormControls>::traversalType>::ownerNode());
+}
+
 void HTMLFormControlsCollection::updateNamedElementCache() const
 {
     if (hasNamedElementCache())
@@ -125,7 +122,6 @@ void HTMLFormControlsCollection::updateNamedElementCache() const
 
     auto cache = std::make_unique<CollectionNamedElementCache>();
 
-    bool ownerIsFormElement = is<HTMLFormElement>(ownerNode());
     HashSet<AtomicStringImpl*> foundInputElements;
 
     ScriptDisallowedScope::InMainThread scriptDisallowedScope;
@@ -136,27 +132,24 @@ void HTMLFormControlsCollection::updateNamedElementCache() const
             const AtomicString& id = element.getIdAttribute();
             if (!id.isEmpty()) {
                 cache->appendToIdCache(id, element);
-                if (ownerIsFormElement)
-                    foundInputElements.add(id.impl());
+                foundInputElements.add(id.impl());
             }
             const AtomicString& name = element.getNameAttribute();
             if (!name.isEmpty() && id != name) {
                 cache->appendToNameCache(name, element);
-                if (ownerIsFormElement)
-                    foundInputElements.add(name.impl());
+                foundInputElements.add(name.impl());
             }
         }
     }
-    if (ownerIsFormElement) {
-        for (auto* elementPtr : formImageElements()) {
-            HTMLImageElement& element = *elementPtr;
-            const AtomicString& id = element.getIdAttribute();
-            if (!id.isEmpty() && !foundInputElements.contains(id.impl()))
-                cache->appendToIdCache(id, element);
-            const AtomicString& name = element.getNameAttribute();
-            if (!name.isEmpty() && id != name && !foundInputElements.contains(name.impl()))
-                cache->appendToNameCache(name, element);
-        }
+
+    for (auto* elementPtr : formImageElements()) {
+        HTMLImageElement& element = *elementPtr;
+        const AtomicString& id = element.getIdAttribute();
+        if (!id.isEmpty() && !foundInputElements.contains(id.impl()))
+            cache->appendToIdCache(id, element);
+        const AtomicString& name = element.getNameAttribute();
+        if (!name.isEmpty() && id != name && !foundInputElements.contains(name.impl()))
+            cache->appendToNameCache(name, element);
     }
 
     setNamedItemCache(WTFMove(cache));
