Source/WebCore/html/HTMLFormControlsCollection.h
@@ -23,7 +23,7 @@
 #pragma once
 
 #include "CachedHTMLCollection.h"
-#include "HTMLElement.h"
+#include "HTMLFormElement.h"
 #include "RadioNodeList.h"
 
 namespace WebCore {
@@ -41,6 +41,8 @@ public:
 
     HTMLElement* item(unsigned offset) const override;
     std::optional<Variant<RefPtr<RadioNodeList>, RefPtr<Element>>> namedItemOrItems(const String&) const;
+
+    HTMLFormElement& ownerNode() const;
 
     // For CachedHTMLCollection.
     HTMLElement* customElementAfter(Element*) const;
